--- a/index.html
+++ b/index.html
@@ -1,71 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Smart Categories</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css">
-  <link rel="stylesheet" href="https://getbootstrap.com/docs/5.1/dist/css/bootstrap.min.css">
-  <style>
-    .site-header {
-      background-color: #f8f9fa;
-      padding: 10px;
-      margin-bottom: 20px;
-    }
-    .site-footer {
-      background-color: #f8f9fa;
-      padding: 10px;
-      margin-top: 20px;
-    }
-    .category-label {
-      display: inline-block;
-      padding: 4px 8px;
-      margin-right: 5px;
-      background-color: #f8f9fa;
-      color: #000;
-      border: 1px solid #ced4da;
-      border-radius: 4px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Smart Categories</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css">
+    <link rel="stylesheet" href="https://getbootstrap.com/docs/5.1/dist/css/bootstrap.min.css">
+    <style>
+        .site-header {
+            background-color: #f8f9fa;
+            padding: 10px;
+            margin-bottom: 20px;
+        }
+
+        .site-footer {
+            background-color: #f8f9fa;
+            padding: 10px;
+            margin-top: 20px;
+        }
+
+        .category-label {
+            display: inline-block;
+            padding: 4px 8px;
+            margin-right: 5px;
+            background-color: #f8f9fa;
+            color: #000;
+            border: 1px solid #ced4da;
+            border-radius: 4px;
+        }
+    </style>
 </head>
 <body>
 <header class="site-header">
-  <div class="container">
-  <h1>Sites Categories</h1>
-  </div>
+    <div class="container">
+        <h1>Sites Categories</h1>
+    </div>
 </header>
 
 <div class="container">
-  <button id="addRowBtn" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#addRowModal">Add Row
-  </button>
-  <table class="table" id="myTable"></table>
+    <button id="addRowBtn" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#addRowModal">Add Row
+    </button>
+    <table class="table" id="myTable"></table>
 </div>
 
 <footer class="site-footer text-center p-3">
-  <p>&copy; 2023 ___. All rights reserved.</p>
+    <p>&copy; 2023 ___. All rights reserved.</p>
 </footer>
 
 <!-- Add Row Modal -->
 <div class="modal fade" id="addRowModal" tabindex="-1" aria-labelledby="addRowModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="addRowModalLabel">Add Row</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="mb-3">
-          <label for="siteInput" class="form-label">Site:</label>
-          <input type="text" placeholder="https://example.com" class="form-control" id="siteInput">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="addRowModalLabel">Add Row</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="mb-3">
+                    <label for="siteInput" class="form-label">Site:</label>
+                    <input type="text" placeholder="https://example.com" class="form-control" id="siteInput">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="addRowSubmit">Add</button>
+            </div>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary" id="addRowSubmit">Add</button>
-      </div>
     </div>
-  </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -74,139 +76,121 @@
 <script src="https://getbootstrap.com/docs/5.1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
 <script>
-  $(document).ready(function () {
-    // return;
-    const  tableData = [
-      {
-        site: 'https://www.google.com',
-        iabCategories: ['Search Engine', 'Technology']
-      },
-      {
-        site: 'https://www.facebook.com',
-        iabCategories: ['Social Media', 'Communication']
-      },
-      {
-        site: 'https://www.amazon.com',
-        iabCategories: ['E-commerce', 'Shopping']
-      },
-      {
-        site: 'https://www.netflix.com',
-        iabCategories: ['Streaming', 'Entertainment']
-      },
-      {
-        site: 'https://www.nytimes.com',
-        iabCategories: ['News', 'Media']
-      },
+    $(document).ready(function () {
+        const baseUrl = 'http://localhost:3003/'; //can be set different port from env
+        const tableData = [
+            {
+                site: 'https://www.google.com',
+                iabCategories: ['Search Engine', 'Technology']
+            },
+            {
+                site: 'https://www.facebook.com',
+                iabCategories: ['Social Media', 'Communication']
+            },
+            {
+                site: 'https://www.amazon.com',
+                iabCategories: ['E-commerce', 'Shopping']
+            },
+            {
+                site: 'https://www.netflix.com',
+                iabCategories: ['Streaming', 'Entertainment']
+            },
+            {
+                site: 'https://www.nytimes.com',
+                iabCategories: ['News', 'Media']
+            },
 
-    ];
-    const siteList = tableData.map(row => row.site);
-    let table = $('#myTable').DataTable({
-      pageLength: 3,
-      lengthMenu: [
-        [3, 10, 25, 50, -1],
-        [3, 10, 25, 50, 'All'],
-      ],
-      columns: [
-        {
-          targets: 0,
-          title: 'Site',
-          data: 'site',
-          render: function (data) {
-            return data;
-          }
-        },
-        {
-          targets: 1,
-          title: 'IAB Categories',
-          data: 'iabCategories',
-          render: function (data) {
-             return data.map(item => '<span class="category-label label-primary">' + item + '</span>').join('');
-          }
-        },
-      ],
-      data: tableData,
-    });
-
-    const $siteInput = $('#siteInput');
-    $('#addRowSubmit').on('click', async function () {
-      let site = $.trim($siteInput.val());
-      if(siteList.includes(site)){
-         $('#addRowModal').modal('hide');
-         $siteInput.val('');
-         return;
-      }
-
-      siteList.push(site);
-      let newRow = {
-        site: site,
-        iabCategories: ['New ___']
-      };
-      table.row.add(newRow).draw();
-      $('#addRowModal').modal('hide');
-      $siteInput.val('');
-
-      const url = 'https://www.thedailystar.net/news/bangladesh/crime-justice/news/tk-30cr-loan-default-arrest-warrant-issued-against-ex-ccci-president-3352316';
-      try {
-        const response = await axios.post('http://localhost:3000/fetch-url', { url });
-        console.log('response', response.data);
-        const gptResponse = await getOpenAiResponse(response.data);
-      } catch (error) {
-        console.error(`Error: ${error}`);
-      }
-
-    });
-
-// Function to fetch categories using ChatGPT API
-    async function getOpenAiResponse(content) {
-      const apiKey = 'pu your api key';
-      const openAiApiUrl = 'https://api.openai.com/v1/chat/completions';
-
-      try {
-        const response = await axios.post(openAiApiUrl,
+        ];
+        const siteList = tableData.map(row => row.site);
+        let table = $('#myTable').DataTable({
+            pageLength: 3,
+            lengthMenu: [
+                [3, 10, 25, 50, -1],
+                [3, 10, 25, 50, 'All'],
+            ],
+            columns: [
                 {
-                  "model": "gpt-4",
-                  "messages": [
-                    {
-                      "role": "system",
-                      "content": "Act as an Ad-tech expert. read the content and match IAB category for the content. respond with the matched IAB Category and code (like IAB12, IAB12-1)"
-                    },
-                    {
-                      "role": "user",
-                      "content": content,
+                    targets: 0,
+                    title: 'Site',
+                    data: 'site',
+                    render: function (data) {
+                        return data;
                     }
-                  ]
                 },
                 {
-                  headers: {
-                    'Content-Type': 'application/json',
-                    'Authorization': `Bearer ${apiKey}`
-                  }
+                    targets: 1,
+                    title: 'IAB Categories',
+                    data: 'iabCategories',
+                    render: function (data) {
+                        return data.map(item => '<span class="category-label label-primary">' + item + '</span>').join('');
+                    }
+                },
+            ],
+            data: tableData,
+        });
+
+        const $siteInput = $('#siteInput');
+        $('#addRowSubmit').on('click', async function () {
+            let url = $.trim($siteInput.val());
+            if (!isValidUrl(url)) {
+                alert('Please provide a valid url');
+                return;
+            }
+
+            if (siteList.includes(url)) {
+                $('#addRowModal').modal('hide');
+                $siteInput.val('');
+                return;
+            }
+
+            siteList.push(url);
+
+            try {
+                const response = await axios.post(baseUrl + 'fetch-url', {url});
+                console.log('url content', response.data);
+                const gptResponse = await getOpenAiResponse(response.data);
+                console.log('gptResponse', gptResponse)
+                let newRow = {
+                    site: url,
+                    iabCategories: [gptResponse]
+                };
+                table.row.add(newRow).draw();
+                $('#addRowModal').modal('hide');
+                $siteInput.val('');
+            } catch (error) {
+                console.error(`Error: ${error}`);
+            }
+
+        });
+
+        async function getOpenAiResponse(content) {
+            try {
+                const response = await axios.post(baseUrl + 'fetch-gpt-response', {content});
+                const data = response.data;
+
+                if (response.status === 200) {
+                    return data;
+                } else {
+                    console.error('Error:', data.error.message);
+                    return null;
                 }
-        );
-
-        const data = response.data;
-        console.log('data', data.choices[0]['message']['content']);
-
-        if (response.ok) {
-          return extractCategories(data.choices[0]['message']['content']);
-        } else {
-          console.error('Error:', data.error.message);
-          return null;
+            } catch (error) {
+                console.error('Error:', error);
+                return null;
+            }
         }
-      } catch (error) {
-        console.error('Error:', error);
-        return null;
-      }
-    }
 
-// Function to extract categories from the ChatGPT response
-    function extractCategories(responseText) {
-      // Implement your logic to extract categories from the response text
-      // and return them as an array
-      // Example:
-      return ['Category 1', 'Category 2', 'Category 3'];
-    }
-  });
+        function isValidUrl(url) {
+            const pattern = new RegExp('^(https?:\\/\\/)?' + // protocol
+                '((([a-z\\d]([a-z\\d-]*[a-z\\d])*)\\.)+[a-z]{2,}|' + // domain name and extension
+                '((\\d{1,3}\\.){3}\\d{1,3}))' + // OR ip (v4) address
+                '(\\:\\d+)?' + // port
+                '(\\/[-a-z\\d%_.~+]*)*' + // path
+                '(\\?[;&a-z\\d%_.~+=-]*)?' + // query string
+                '(\\#[-a-z\\d_]*)?$', 'i'); // fragment locator
+            return !!pattern.test(url);
+        }
+    });
 </script>
 </body>
 </html>
