--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             border: 1px solid #ced4da;
             border-radius: 4px;
         }
+        #myTable {
+            width: 100% !important;
+        }
     </style>
 </head>
 <body>
@@ -81,32 +84,37 @@
         const tableData = [
             {
                 site: 'https://www.google.com',
-                iabCategories: ['Search Engine', 'Technology']
+                iabCategories: ['Search Engine', 'Technology'],
+                keywords: [],
             },
             {
                 site: 'https://www.facebook.com',
-                iabCategories: ['Social Media', 'Communication']
+                iabCategories: ['Social Media', 'Communication'],
+                keywords: [],
             },
             {
                 site: 'https://www.amazon.com',
-                iabCategories: ['E-commerce', 'Shopping']
+                iabCategories: ['E-commerce', 'Shopping'],
+                keywords: [],
             },
             {
                 site: 'https://www.netflix.com',
-                iabCategories: ['Streaming', 'Entertainment']
+                iabCategories: ['Streaming', 'Entertainment'],
+                keywords: [],
             },
             {
                 site: 'https://www.nytimes.com',
-                iabCategories: ['News', 'Media']
+                iabCategories: ['News', 'Media'],
+                keywords: [],
             },
 
         ];
         const siteList = tableData.map(row => row.site);
         let table = $('#myTable').DataTable({
-            pageLength: 3,
+            pageLength: 5,
             lengthMenu: [
-                [3, 10, 25, 50, -1],
-                [3, 10, 25, 50, 'All'],
+                [5, 10, 25, 50, -1],
+                [5, 10, 25, 50, 'All'],
             ],
             columns: [
                 {
@@ -122,7 +130,15 @@
                     title: 'IAB Categories',
                     data: 'iabCategories',
                     render: function (data) {
-                        return data.map(item => '<span class="category-label label-primary">' + item + '</span>').join('');
+                        return data.map(item => '<span class="category-label label-primary mb-1">' + item + '</span>').join('');
+                    }
+                },
+                {
+                    targets: 2,
+                    title: 'Keywords',
+                    data: 'keywords',
+                    render: function (data) {
+                        return data.map(item => '<span class="category-label label-primary mb-1">' + item + '</span>').join('');
                     }
                 },
             ],
@@ -147,25 +163,49 @@
 
             try {
                 const response = await axios.post(baseUrl + 'fetch-url', {url});
-                console.log('url content', response.data);
-                const gptResponse = await getOpenAiResponse(response.data);
-                console.log('gptResponse', gptResponse)
-                let newRow = {
-                    site: url,
-                    iabCategories: [gptResponse]
-                };
-                table.row.add(newRow).draw();
-                $('#addRowModal').modal('hide');
-                $siteInput.val('');
+                await Promise.all([getIabCategoriesFromOpenAi(response.data), getKeywordsFromOpenAi(response.data)]).then((values) => {
+                    const iabCategories = values[0];
+                    const keywords = values[1];
+                    console.group();
+                    console.log('url content', values);
+                    console.log('iabCategories', iabCategories);
+                    console.log('keywords', keywords);
+                    console.groupEnd();
+                    let newRow = {
+                        site: url,
+                        iabCategories: iabCategories,
+                        keywords: keywords,
+                    };
+                    table.row.add(newRow).draw();
+                    $('#addRowModal').modal('hide');
+                    $siteInput.val('');
+                });
             } catch (error) {
                 console.error(`Error: ${error}`);
             }
 
         });
 
-        async function getOpenAiResponse(content) {
+        async function getIabCategoriesFromOpenAi(content) {
             try {
-                const response = await axios.post(baseUrl + 'fetch-gpt-response', {content});
+                const response = await axios.post(baseUrl + 'fetch-iab-categories', {content});
+                const data = response.data;
+
+                if (response.status === 200) {
+                    return data;
+                } else {
+                    console.error('Error:', data.error.message);
+                    return null;
+                }
+            } catch (error) {
+                console.error('Error:', error);
+                return null;
+            }
+        }
+
+        async function getKeywordsFromOpenAi(content) {
+            try {
+                const response = await axios.post(baseUrl + 'fetch-keywords', {content});
                 const data = response.data;
 
                 if (response.status === 200) {
