--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Categories</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css">
-    <link rel="stylesheet" href="https://getbootstrap.com/docs/5.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://getbootstrap.com/docs/5.3/dist/css/bootstrap.min.css">
+    <link rel="icon" type="image/png" href="img/fav.png">
     <style>
         .site-header {
-            background-color: #f8f9fa;
             padding: 10px;
             margin-bottom: 20px;
         }
 
         .site-footer {
-            background-color: #f8f9fa;
             padding: 10px;
             margin-top: 20px;
         }
@@ -32,23 +31,30 @@
         #myTable {
             width: 100% !important;
         }
+
+        img {
+          width: 10%;
+          margin: 10px auto 20px;
+          display: block;
+        }
     </style>
 </head>
 <body>
 <header class="site-header">
+  <img src="img/logo.png">
     <div class="container">
         <h1>Sites Categories</h1>
     </div>
 </header>
 
 <div class="container">
-    <button id="addRowBtn" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#addRowModal">Add Row
+    <button id="addRowBtn" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#addRowModal">Add Site
     </button>
     <table class="table" id="myTable"></table>
 </div>
 
 <footer class="site-footer text-center p-3">
-    <p>&copy; 2023 ___. All rights reserved.</p>
+    <p>&copy; 2023 : SmartCategorize. All rights reserved.</p>
 </footer>
 
 <!-- Add Row Modal -->
@@ -84,33 +90,21 @@
         const tableData = [
             {
                 id: 1,
-                site: 'https://www.google.com',
-                iabCategories: ['Search Engine', 'Technology'],
-                keywords: [],
+                site: 'https://www.facebook.com',
+                iabCategories: ['IAB23-5: Digital Audio', 'IAB25-1: Mobile Applications', 'IAB25-3: Mobile Advertising'],
+                keywords: ['Social Media'],
             },
             {
                 id: 2,
-                site: 'https://www.facebook.com',
-                iabCategories: ['Social Media', 'Communication'],
-                keywords: [],
+                site: 'https://www.netflix.com',
+                iabCategories: ['IAB14-3: Streaming Video Services'],
+                keywords: ['Netflix', 'Streaming', 'Smart TVs', 'Membership', 'Unlimited movies'],
             },
             {
                 id: 3,
-                site: 'https://www.amazon.com',
-                iabCategories: ['E-commerce', 'Shopping'],
-                keywords: [],
-            },
-            {
-                id: 4,
-                site: 'https://www.netflix.com',
-                iabCategories: ['Streaming', 'Entertainment'],
-                keywords: [],
-            },
-            {
-                id: 5,
                 site: 'https://www.nytimes.com',
-                iabCategories: ['News', 'Media'],
-                keywords: [],
+                iabCategories: ['IAB10: Politics', 'IAB17-18: Basketball', 'IAB19-9: Aging','IAB19-18: Sports','IAB22-2: Crosswords & Puzzle Games'],
+                keywords: ['Politics', 'Supreme Court', 'Ukraine', 'Department'],
             },
 
         ];
@@ -137,7 +131,8 @@
                     data: 'site',
                     render: function (data) {
                         return data;
-                    }
+                    },
+                    width: '30%',
                 },
                 {
                     targets: 2,
@@ -145,7 +140,8 @@
                     data: 'iabCategories',
                     render: function (data) {
                         return data.map(item => '<span class="category-label label-primary mb-1">' + item + '</span>').join('');
-                    }
+                    },
+                    width: '30%',
                 },
                 {
                     targets: 2,
@@ -153,7 +149,8 @@
                     data: 'keywords',
                     render: function (data) {
                         return data.map(item => '<span class="category-label label-primary mb-1">' + item + '</span>').join('');
-                    }
+                    },
+                    width: '40%',
                 },
             ],
             data: tableData,
