--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 <div class="container">
     <button id="addRowBtn" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#addRowModal">Add Site
     </button>
+    <button id="downloadBtn" class="btn btn-warning mb-3 float-right" data-bs-toggle="modal" data-bs-target="#uploadModal">Upload Site List
+    </button>
     <table class="table" id="myTable"></table>
 </div>
 
@@ -78,6 +80,44 @@
         </div>
     </div>
 </div>
+
+<!-- Add Row Modal -->
+<div class="modal fade" id="uploadModal" tabindex="-1" aria-labelledby="uploadModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="uploadModalLabel">Upload File</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="mb-3">
+                    <label for="siteFile">
+                        Choose a file:
+                        <i class="text-danger">*</i>
+                    </label>
+                    <input type="file" id="siteFile" name="siteFile" accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, text/csv" />
+
+                    <br>
+                    <small>Accepted File Format - .xls, .xlsx, .csv</small>
+
+                </div>
+                <div id="download-link-section" style="display: none;">
+                    <hr>
+                    <h4>Download Uploaded File</h4>
+                    <p>Click on the link below to download the uploaded file:</p>
+                    <a id="downloadLink" href="#">Download File</a>
+                </div>
+
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="uploadSubmit">Submit</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
@@ -192,6 +232,20 @@
                 console.error(`Error: ${error}`);
             }
 
+        });
+
+        const $siteFile = $('#siteFile');
+        $('#uploadSubmit').on('click', async function () {
+            let file = $siteFile[0].files[0];
+            const formData = new FormData()
+            formData.append('siteFile', file)
+            const response = await axios.post(baseUrl + 'fileupload', formData);
+
+            const data = await response.data;
+            const downloadLink = document.getElementById('downloadLink');
+            const downloadLinkSection = document.getElementById('download-link-section');
+            downloadLink.href = data.fileUrl;
+            downloadLinkSection.style.display = 'block';
         });
 
         async function getIabCategoriesFromOpenAi(content) {
